Build the skeleton for the Key Competencies modal. Still WIP.

--- a/frontend/src/theme/custom.scss
+++ b/frontend/src/theme/custom.scss
@@ -145,3 +145,12 @@ ion-item.item-has-focus {
     border-color: var(--ion-color-tertiary);
   }
 }
+
+/*
+  Classes that can be applied to Popovers.
+*/
+.popover-width-350 {
+  --width: 350px;
+  // Make sure the Popover doesn't get too large.
+  --max-width: 90%;
+}
