Add buttons to the popover to close it and to delete the item.

--- a/frontend/src/app/forms/steps/technical-knowledge/rating-modal/item-popover/item-popover.component.html
+++ b/frontend/src/app/forms/steps/technical-knowledge/rating-modal/item-popover/item-popover.component.html
@@ -1,5 +1,17 @@
 <ion-header>
-  <ion-toolbar></ion-toolbar>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button (click)="deleteItem()">
+        <ion-icon name="trash-outline" color="secondary"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
+    <ion-buttons slot="end">
+      <ion-button (click)="closePopover()">
+        Close
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
