Add a title to the popover

--- a/frontend/src/app/forms/steps/technical-knowledge/rating-modal/item-popover/item-popover.component.html
+++ b/frontend/src/app/forms/steps/technical-knowledge/rating-modal/item-popover/item-popover.component.html
@@ -6,6 +6,8 @@
       </ion-button>
     </ion-buttons>
 
+    <ion-title color="primary">{{ formItem.controls.name.value }}</ion-title>
+
     <ion-buttons slot="end">
       <ion-button (click)="closePopover()">
         Close
