Make it possible to add the search term to the list

--- a/frontend/src/app/forms/steps/technical-knowledge/rating-modal/rating-modal.component.html
+++ b/frontend/src/app/forms/steps/technical-knowledge/rating-modal/rating-modal.component.html
@@ -11,42 +11,64 @@
 </ion-header>
 
 <ion-content>
-  <ion-toolbar>
-    <ion-segment [formControl]="segmentFilter">
-      <ion-segment-button [value]="SEGMENT_FILTER_VALUES.All">
-        All
-      </ion-segment-button>
-      <ion-segment-button [value]="SEGMENT_FILTER_VALUES.Selected">
-        Selected
-      </ion-segment-button>
-    </ion-segment></ion-toolbar
-  >
+  <div class="container">
+    <div class="main-items">
+      <ion-toolbar>
+        <ion-segment [formControl]="segmentFilter">
+          <ion-segment-button [value]="SEGMENT_FILTER_VALUES.All">
+            All
+          </ion-segment-button>
+          <ion-segment-button [value]="SEGMENT_FILTER_VALUES.Selected">
+            Selected
+          </ion-segment-button>
+        </ion-segment></ion-toolbar
+      >
 
-  <ion-list>
-    <ion-item
-      *ngFor="let formItem of filteredFormItems"
-      (click)="showItemPopover(formItem, $event)"
-    >
-      <ng-container *ngIf="formItem.disabled">
-        <ion-icon slot="start" name="ellipse-outline" color="medium"></ion-icon>
-        <ion-label color="medium">{{ formItem.controls.name.value }}</ion-label>
-      </ng-container>
+      <ion-list>
+        <ion-item
+          *ngFor="let formItem of filteredFormItems"
+          (click)="showItemPopover(formItem, $event)"
+        >
+          <ng-container *ngIf="formItem.disabled">
+            <ion-icon
+              slot="start"
+              name="ellipse-outline"
+              color="medium"
+            ></ion-icon>
+            <ion-label color="medium">{{
+              formItem.controls.name.value
+            }}</ion-label>
+          </ng-container>
 
-      <ng-container *ngIf="!formItem.disabled">
-        <ion-icon
-          slot="start"
-          name="checkmark-circle-outline"
-          color="secondary"
-        ></ion-icon>
-        <ion-label color="secondary">
-          <span>{{ formItem.controls.name.value }}</span>
-          <div>
-            <app-stars
-              [filledStars]="formItem.controls.rating.value"
-            ></app-stars>
-          </div>
-        </ion-label>
-      </ng-container>
-    </ion-item>
-  </ion-list>
+          <ng-container *ngIf="!formItem.disabled">
+            <ion-icon
+              slot="start"
+              name="checkmark-circle-outline"
+              color="secondary"
+            ></ion-icon>
+            <ion-label color="secondary">
+              <span>{{ formItem.controls.name.value }}</span>
+              <div>
+                <app-stars
+                  [filledStars]="formItem.controls.rating.value"
+                ></app-stars>
+              </div>
+            </ion-label>
+          </ng-container>
+        </ion-item>
+      </ion-list>
+    </div>
+
+    <div class="bottom-content" *ngIf="searchInput.value">
+      <span>
+        Not found what you were looking for? You can also add your search term
+        ("{{ searchInput.value }}") to the list.
+      </span>
+      <div class="add-to-list-button-container ion-margin-top">
+        <ion-button color="primary" (click)="addSearchTermToList()">
+          Add to list
+        </ion-button>
+      </div>
+    </div>
+  </div>
 </ion-content>
