--- a/frontend/src/app/forms/steps/technical-knowledge/rating-modal/rating-modal.component.scss
+++ b/frontend/src/app/forms/steps/technical-knowledge/rating-modal/rating-modal.component.scss
@@ -12,6 +12,18 @@
   padding: 0.5rem 1.5rem;
 }
 
+.no-items {
+  color: var(--ion-color-medium);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1.5rem;
+  margin-top: 2rem;
+}
+.no-items ion-icon {
+  font-size: 50px;
+}
+
 .add-to-list-button-container {
   display: flex;
   justify-content: center;
