--- a/frontend/src/app/forms/steps/technical-knowledge/rating-modal/rating-modal.component.html
+++ b/frontend/src/app/forms/steps/technical-knowledge/rating-modal/rating-modal.component.html
@@ -24,7 +24,7 @@
         </ion-segment></ion-toolbar
       >
 
-      <div class="no-items ion-padding" *ngIf="filteredFormItems.length < 1">
+      <div class="no-items" *ngIf="filteredFormItems.length < 1">
         <ion-icon name="search-outline"></ion-icon>
         <p>No items match your selection</p>
       </div>
