--- a/frontend/src/app/forms/steps/pictures-entry/pictures-entry.component.html
+++ b/frontend/src/app/forms/steps/pictures-entry/pictures-entry.component.html
@@ -1,12 +1,16 @@
 <div class="main-description">
   <h1>Picture</h1>
   <span>
-    You can add a picture of you by tapping on the image icon.
+    Add a picture of yourself by tapping on the image icon.
   </span>
 
-  <div>
-    <ion-button class="custom-button" fill="clear" size="large">
-      <ion-icon name="person-circle"></ion-icon>
-    </ion-button>
-  </div>
+  <ion-button
+    (click)="takePicture()"
+    class="custom-button"
+    fill="clear"
+    size="large"
+  >
+    <ion-icon name="person-circle"></ion-icon>
+  </ion-button>
+  <ion-img [src]="photo"></ion-img>
 </div>
