Added some comments and renamed some function

--- a/frontend/src/app/forms/steps/pictures-entry/pictures-entry.component.html
+++ b/frontend/src/app/forms/steps/pictures-entry/pictures-entry.component.html
@@ -25,7 +25,7 @@
         <ion-item-option
           color="danger"
           expandable
-          (click)="deleteEducationInfo()"
+          (click)="deletePictureEntry()"
         >
           <ion-icon name="trash" size="large"></ion-icon>
         </ion-item-option>
