--- a/frontend/src/app/forms/side-menu/side-menu.component.html
+++ b/frontend/src/app/forms/side-menu/side-menu.component.html
@@ -35,7 +35,7 @@
           [ngTemplateOutletContext]="{
             step: APPLICATION_STEP.PicturesEntry,
             displayName: 'Picture Entry',
-            isValid: formsData.controls.pictureEntry.controls.condition.valid,
+            isValid: formsData.controls.pictureEntry.controls.picString.valid,
             isActive: currentStep === APPLICATION_STEP.PicturesEntry
           }"
         ></ng-container>
