impression page added

--- a/frontend/src/app/home/home.page.html
+++ b/frontend/src/app/home/home.page.html
@@ -1,3 +1,16 @@
+<ion-header class="ion-no-border ion-padding">
+  <ion-toolbar>
+    <ion-buttons slot="end">
+      <ion-button style="min-height: 100px;">
+        <ion-icon
+          class="custom-icon"
+          name="file-tray-stacked-outline"
+        ></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content>
   <div class="container">
     <div class="logo-and-message">
