Rename 'Technical Knowledge' to 'KeyCompetencies'

--- a/frontend/src/app/forms/forms.page.html
+++ b/frontend/src/app/forms/forms.page.html
@@ -54,11 +54,11 @@
           *ngSwitchCase="APPLICATION_STEP.EducationInformation"
         >
         </form-education-info>
-        <form-technical-knowledge
+        <form-key-competencies
           [formsData]="formsData"
-          *ngSwitchCase="APPLICATION_STEP.TechnicalKnowledge"
+          *ngSwitchCase="APPLICATION_STEP.KeyCompetencies"
         >
-        </form-technical-knowledge>
+        </form-key-competencies>
 
         <form-submit-page
           [formsData]="formsData"
