--- a/frontend/src/app/forms/side-menu/side-menu.component.html
+++ b/frontend/src/app/forms/side-menu/side-menu.component.html
@@ -53,10 +53,10 @@
         <ng-container
           [ngTemplateOutlet]="menuItem"
           [ngTemplateOutletContext]="{
-            step: APPLICATION_STEP.TechnicalKnowledge,
-            displayName: 'Technical Knowledge',
-            isValid: formsData.controls.technicalKnowledge.valid,
-            isActive: currentStep === APPLICATION_STEP.TechnicalKnowledge
+            step: APPLICATION_STEP.KeyCompetencies,
+            displayName: 'Key Competencies',
+            isValid: formsData.controls.keyCompetencies.valid,
+            isActive: currentStep === APPLICATION_STEP.KeyCompetencies
           }"
         ></ng-container>
 
