--- a/frontend/src/app/forms/steps/key-competencies/key-competencies.component.html
+++ b/frontend/src/app/forms/steps/key-competencies/key-competencies.component.html
@@ -1,7 +1,7 @@
 <div class="main-description">
-  <h1>Technical Knowledge</h1>
+  <h1>Key Competencies</h1>
 
-  Now, please select and rate your technical skills. We expect you to add at
+  Now, please select and rate your key competencies. We expect you to add at
   least one entry to "Professional Software" in order to complete this step.
 
   <ion-list class="ion-margin-top">
