Add 'Languages' to the key competencies

--- a/frontend/src/app/forms/steps/key-competencies/key-competencies.component.html
+++ b/frontend/src/app/forms/steps/key-competencies/key-competencies.component.html
@@ -2,7 +2,7 @@
   <h1>Key Competencies</h1>
 
   Now, please select and rate your key competencies. We expect you to add at
-  least one entry to "Professional Software" in order to complete this step.
+  least one entry to "Languages" in order to complete this step.
 
   <ion-list class="ion-margin-top">
     <ion-item
