--- a/frontend/src/app/forms/steps/key-competencies/key-competencies.component.html
+++ b/frontend/src/app/forms/steps/key-competencies/key-competencies.component.html
@@ -7,12 +7,16 @@
   <ion-list class="ion-margin-top">
     <ion-item
       class="ion-no-padding"
+      lines="full"
       (click)="showRatingModal(item.formItem)"
       *ngFor="let item of listItems"
     >
+      <ion-icon [name]="item.iconName" slot="start"></ion-icon>
+
       <ion-label>
         <span class="list-item-label">{{ item.displayName }}</span>
       </ion-label>
+
       <ion-badge slot="end">
         <!--
           We use the "value" and "disabled" properties like so:
