--- a/frontend/src/app/rating/rating.page.html
+++ b/frontend/src/app/rating/rating.page.html
@@ -6,6 +6,16 @@
       </ion-button>
     </ion-buttons>
 
+    <ion-title class="ion-text-center">
+      <ng-container *ngIf="currentStep !== HR_RATING_STEP.Finalize">
+        Step {{currentStepIndex + 1}} / {{HR_RATING_STEP_ARR.length - 1}}
+      </ng-container>
+
+      <ng-container *ngIf="currentStep === HR_RATING_STEP.Finalize">
+        Finalize
+      </ng-container>
+    </ion-title>
+
     <ion-buttons slot="end">
       <ion-button>
         <ion-menu-button slot="end" id="hr-side-menu">
@@ -34,11 +44,28 @@
           [ratingForm]="ratingForm"
           *ngSwitchCase="HR_RATING_STEP.ImpressionInformation"
         ></app-impression-page>
+        <app-finalize-page
+          [ratingForm]="ratingForm"
+          *ngSwitchCase="HR_RATING_STEP.Finalize"
+        ></app-finalize-page>
       </ng-container>
     </div>
 
     <div class="buttons-container">
-      <button class="fancy-button" (click)="navigateToNextStep()">
+      <ng-container *ngIf="currentStep === HR_RATING_STEP.Finalize">
+        <button
+          class="fancy-button"
+          [disabled]="!ratingForm.valid"
+          (click)="finalize()"
+        >
+          Finalize
+        </button>
+      </ng-container>
+      <button
+        class="fancy-button"
+        (click)="navigateToNextStep()"
+        *ngIf="currentStep !== HR_RATING_STEP.Finalize"
+      >
         Continue
       </button>
     </div>
