added applications page

--- a/frontend/src/app/home/home.page.html
+++ b/frontend/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header class="ion-no-border ion-padding">
   <ion-toolbar>
     <ion-buttons slot="end">
-      <ion-button style="min-height: 100px;">
+      <ion-button style="min-height: 100px;" (click)="goToApplications()">
         <ion-icon
           class="custom-icon"
           name="file-tray-stacked-outline"
