Renamed some elements like the picture entry component into profile picture

--- a/frontend/src/app/forms/forms.page.html
+++ b/frontend/src/app/forms/forms.page.html
@@ -44,11 +44,11 @@
           *ngSwitchCase="APPLICATION_STEP.ContactInformation"
         >
         </form-contact-info>
-        <form-pictures-entry
+        <form-profile-picture
           [formsData]="formsData"
-          *ngSwitchCase="APPLICATION_STEP.PicturesEntry"
+          *ngSwitchCase="APPLICATION_STEP.ProfilePicture"
         >
-        </form-pictures-entry>
+        </form-profile-picture>
         <form-education-info
           [formsData]="formsData"
           *ngSwitchCase="APPLICATION_STEP.EducationInformation"
