--- a/frontend/src/app/forms/steps/profile-picture/profile-picture.component.html
+++ b/frontend/src/app/forms/steps/profile-picture/profile-picture.component.html
@@ -1,44 +1,31 @@
 <div class="main-description">
   <h1>Picture</h1>
-
-  <div
-    *ngIf="
-      formsData.controls.profilePicture.controls.pictureBase64.invalid;
-      else elseBlock
-    "
-  >
-    <span>
-      Add a picture of yourself by tapping on the image icon.
-    </span>
-    <ion-button
-      (click)="takePicture()"
-      class="custom-button"
-      fill="clear"
-      size="large"
-    >
-      <ion-icon name="person-circle"></ion-icon>
-    </ion-button>
-  </div>
-  <ng-template #elseBlock>
-    <span>
-      Good job! If you want to take another picture, just delete the actual
-      picture by sliding on it and take another one.
-    </span>
-    <ion-item-sliding class="ion-no-padding custom-sliding">
-      <ion-item-options side="end">
-        <ion-item-option
-          color="danger"
-          expandable
-          (click)="deletePictureEntry()"
-        >
-          <ion-icon name="trash" size="large"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-      <ion-item class="ion-no-padding">
-        <img
-          [src]="formsData.controls.profilePicture.controls.pictureBase64.value"
-        />
-      </ion-item>
-    </ion-item-sliding>
-  </ng-template>
 </div>
+<div
+  *ngIf="
+    formsData.controls.profilePicture.controls.pictureBase64.invalid;
+    else elseBlock
+  "
+>
+  <span class="description">
+    Add a picture of yourself by tapping on the image icon.
+  </span>
+  <button (click)="takePicture()" class="custom-button">
+    <ion-icon name="person"></ion-icon>
+  </button>
+</div>
+<ng-template #elseBlock>
+  <span class="description">
+    Good job! If you want to take another picture, just delete the actual
+    picture by sliding on it and take another one.
+  </span>
+  <ion-item class="ion-no-padding" lines="none">
+    <img
+      [src]="formsData.controls.profilePicture.controls.pictureBase64.value"
+      class="profile-picture"
+    />
+  </ion-item>
+  <button (click)="deletePictureEntry()" class="trash-button">
+    <ion-icon name="trash"></ion-icon>
+  </button>
+</ng-template>
