minor changes on the trash button

--- a/frontend/src/app/forms/steps/profile-picture/profile-picture.component.html
+++ b/frontend/src/app/forms/steps/profile-picture/profile-picture.component.html
@@ -26,6 +26,6 @@
     />
   </ion-item>
   <button (click)="deletePictureEntry()" class="trash-button">
-    <ion-icon name="trash"></ion-icon>
+    <ion-icon name="trash" class="trash-icon"></ion-icon>
   </button>
 </ng-template>
